deps: fix for token-metadata and candy-machine

--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -42,14 +42,13 @@
   "dependencies": {
     "@metaplex-foundation/mpl-core": "^0.0.2",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.35.1"
+    "@solana/web3.js": "^1.35.1",
+    "debug": "^4.3.3"
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.1.0",
-    "@solana/spl-token": "^0.1.8",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
-    "debug": "^4.3.3",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
     "spok": "^1.4.2",
