--- a/candy-machine/js/package.json
+++ b/candy-machine/js/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@metaplex-foundation/beet": "^0.0.8",
     "@metaplex-foundation/beet-solana": "^0.0.6",
+    "@metaplex-foundation/mpl-core": "^0.0.4",
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
