--- a/.github/workflows/integration-fixed-price-sale.yml
+++ b/.github/workflows/integration-fixed-price-sale.yml
@@ -24,15 +24,16 @@ jobs:
         id: filter
         with:
           filters: |
-            code:
-              - 'core/**'
+          core:
+            - 'core/**'
+          package:
               - 'fixed-price-sale/**'
   build-and-integration-test-fixed-price-sale:
     runs-on: ubuntu-latest
     env:
       cache_id: program-fixed-price-sale
     needs: changes
-    if: ${{ needs.changes.outputs.code == 'true' }}
+    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
