--- a/.github/workflows/integration-token-metadata.yml
+++ b/.github/workflows/integration-token-metadata.yml
@@ -24,15 +24,16 @@ jobs:
       id: filter
       with:
         filters: |
-          code:
+          core:
             - 'core/**'
+          package:
             - 'token-metadata/**'
   build-and-integration-test-token-metadata:
     runs-on: ubuntu-latest
     env:
       cache_id: program-token-metadata 
     needs: changes
-    if: ${{ needs.changes.outputs.code == 'true' }}
+    if: ${{ needs.changes.outputs.core == 'true' || needs.changes.outputs.package == 'true' }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
