--- a/.github/workflows/integration-metaplex.yml
+++ b/.github/workflows/integration-metaplex.yml
@@ -57,7 +57,10 @@ jobs:
             ./rust/target
           key: ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUSTC_HASH }}
 
-      # Build Rust Program
+      # Build Rust Programs
+      - uses: ./.github/actions/build-token-metadata
+      - uses: ./.github/actions/build-token-vault
+      - uses: ./.github/actions/build-auction
       - uses: ./.github/actions/build-metaplex
 
       # Install JS SDK deps
@@ -65,9 +68,9 @@ jobs:
         with: 
           cache_id: sdk-metaplex
           working_dir: ./metaplex/js
-          build_auction: true
-          build_token_vault: true
           build_token_metadata: true
+          build_token_vault: true
+          build_auction: true
 
       # Run integration test
       - name: start-local-test-validator
