--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -37,12 +37,21 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "dependencies": {
+    "@metaplex-foundation/beet": "^0.0.8",
+    "@metaplex-foundation/beet-solana": "^0.0.6",
     "@metaplex-foundation/mpl-core": "^0.0.2",
     "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.35.1"
+    "@solana/web3.js": "^1.35.1",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
+    "@metaplex-foundation/amman": "^0.1.0",
+    "bn.js": "^5.2.0",
     "eslint": "^8.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "spok": "^1.4.3",
+    "tape": "^5.5.0",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.5"
   }
 }
