--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -12,7 +12,12 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "test": "echo mpl-token-vault tests coming up ...",
+    "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
+    "amman:start": "DEBUG='amman*' amman validator",
+    "amman:stop": "pkill solana-test-validator",
+    "pretest": "yarn build && yarn amman:start",
+    "test": "tape dist/test/*.js && yarn ex:all",
+    "posttest": "yarn build && yarn amman:stop",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
