test: adding token vault SDK tests

--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -25,7 +25,7 @@
     "fix": "yarn fix:lint && yarn fix:prettier"
   },
   "files": [
-    "/dist"
+    "/dist/src"
   ],
   "publishConfig": {
     "access": "public",
