examples: adding examples and verifying them as part of tests

--- a/token-vault/js/package.json
+++ b/token-vault/js/package.json
@@ -17,6 +17,11 @@
     "amman:stop": "pkill solana-test-validator",
     "pretest": "yarn build && yarn amman:start",
     "test": "tape dist/test/*.js && yarn ex:all",
+    "ex:all": " yarn ex:init-vault && yarn ex:add-token-1 && yarn ex:add-token-2 && yarn ex:life-of-vault",
+    "ex:init-vault": "node dist/examples/init-vault.js",
+    "ex:add-token-1": "node dist/examples/add-token-to-inactive-vault.single-transaction.js",
+    "ex:add-token-2": "node dist/examples/add-token-to-inactive-vault.two-transactions.js",
+    "ex:life-of-vault": "node dist/examples/life-of-vault.js",
     "posttest": "yarn build && yarn amman:stop",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
