--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug report
 title: "[Bug]: "
 description: Report incorrect or unexpected behavior
-labels: [bug, needs tests]
+labels: [bug]
 body:
   - type: dropdown
     id: package
