fix(form template): fix boolean options

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -34,8 +34,8 @@ body:
     attributes:
       label: Standard Change?
       options:
-        - No
-        - Yes
+        - "No"
+        - "Yes"
       description: Does this feature change the Metaplex token standard in a fundamental way?
     validations:
       required: true
