--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "lerna": "^4.0.0",
     "prettier": "^2.4.1",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "@metaplex-foundation/amman": "portal:/Volumes/d/dev/mp/metaplex/metaplex-foundation/amman"
   }
 }
