--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -41,6 +41,7 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "dependencies": {
+    "@metaplex-foundation/cusper": "^0.0.2",
     "@metaplex-foundation/mpl-core": "^0.0.2",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.35.1",
