--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -47,12 +47,14 @@
     "@metaplex-foundation/mpl-core": "^0.0.2",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.35.1",
+    "bn.js": "^5.2.0",
     "debug": "^4.3.3"
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.1.0 ",
     "@metaplex-foundation/solita": "0.1.0",
     "@solana/spl-token": "0.1.8",
+    "@types/bn.js": "^5.1.0",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
     "eslint": "^8.3.0",
