--- a/token-metadata/cli/Cargo.toml
+++ b/token-metadata/cli/Cargo.toml
@@ -11,6 +11,8 @@ publish = false
 [dependencies]
 solana-client = "1.9.5"
 solana-program = "1.9.5"
+solana-remote-wallet = "1.9.5"
+uriparse = "0.6.3"
 solana-sdk = "1.9.5"
 bincode = "1.3.2"
 borsh = "0.9.1"
