--- a/core/js/package.json
+++ b/core/js/package.json
@@ -37,6 +37,7 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "dependencies": {
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.35.1",
     "bs58": "^4.0.1"
   },
