--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@metaplex-foundation/beet": "^0.0.8",
     "@metaplex-foundation/beet-solana": "^0.0.6",
+    "@metaplex-foundation/mpl-core": "^0.0.5",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.35.1"
   },
