--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@metaplex-foundation/beet": "^0.0.8",
     "@metaplex-foundation/beet-solana": "^0.0.6",
-    "@metaplex-foundation/mpl-core": "0.0.4",
+    "@metaplex-foundation/mpl-core": "^0.0.5",
     "@solana/web3.js": "^1.35.1",
     "bn.js": "^5.2.0"
   },
