--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
-    "tape": "^5.5.2"
+    "tape": "^5.5.2",
+    "typescript": "^4.6.2"
   }
 }
