--- a/auction/js/package.json
+++ b/auction/js/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "eslint": "^8.3.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.2"
   }
 }
