--- a/candy-machine/js/package.json
+++ b/candy-machine/js/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.2"
   }
 }
