--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -55,6 +55,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
-    "tape": "^5.5.2"
+    "tape": "^5.5.2",
+    "typescript": "^4.6.2"
   }
 }
