--- a/metaplex/js/package.json
+++ b/metaplex/js/package.json
@@ -55,6 +55,7 @@
     "esbuild-runner": "^2.2.1",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
-    "tape": "^5.5.2"
+    "tape": "^5.5.2",
+    "typescript": "^4.6.2"
   }
 }
