--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -53,6 +53,7 @@
     "rimraf": "^3.0.2",
     "spok": "^1.4.2",
     "supports-color": "^9.2.1",
-    "tape": "^5.5.2"
+    "tape": "^5.5.2",
+    "typescript": "^4.6.2"
   }
 }
