--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^2.4.1"
   },
   "resolutions": {
-    "@metaplex-foundation/amman": "portal:/Volumes/d/dev/mp/metaplex/metaplex-foundation/amman"
+    "@metaplex-foundation/amman": "portal:/Volumes/d/dev/mp/metaplex/metaplex-foundation/amman",
+    "@solana/spl-token": "portal:/Users/thlorenz/dev/mp/solana/solana-labs/spl/token/js"
   }
 }
