--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -2,10 +2,10 @@
   "name": "@metaplex-foundation/mpl-token-metadata",
   "version": "1.2.5",
   "description": "MPL Token Metadata JavaScript API.",
-  "main": "dist/src/mpl-token-metadata.js",
-  "types": "dist/src/mpl-token-metadata.d.ts",
+  "main": "dist/mpl-token-metadata.js",
+  "types": "dist/mpl-token-metadata.d.ts",
   "scripts": {
-    "check:publish-ready": "yarn build && yarn test",
+    "check:publish-ready": "yarn build && yarn lint",
     "preversion": "yarn check:publish-ready",
     "postversion": "git add package.json && git commit -m \"chore: update $npm_package_name to v$npm_package_version\" && git tag $npm_package_name@$npm_package_version",
     "prepublishOnly": "yarn check:publish-ready",
@@ -13,10 +13,7 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
-    "pretest": "yarn build",
-    "amman:start": "DEBUG=\"amman:*\" amman validator",
-    "amman:stop": "pkill solana-test-validator",
-    "test": "tape ./dist/test/*.js",
+    "test": "echo 'Not testing generated code, please run program tests instead'",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
@@ -51,17 +48,13 @@
     "debug": "^4.3.3"
   },
   "devDependencies": {
-    "@metaplex-foundation/amman": "^0.1.0 ",
     "@metaplex-foundation/solita": "0.1.0",
     "@solana/spl-token": "0.1.8",
     "@types/bn.js": "^5.1.0",
     "@types/debug": "^4.1.7",
-    "@types/tape": "^4.13.2",
     "eslint": "^8.3.0",
     "rimraf": "^3.0.2",
-    "spok": "^1.4.2",
     "supports-color": "^9.2.1",
-    "tape": "^5.5.2",
     "typescript": "^4.6.2"
   }
 }
