--- a/gumdrop/program/Cargo.toml
+++ b/gumdrop/program/Cargo.toml
@@ -20,6 +20,7 @@ default = []
 anchor-lang = "0.17.0"
 anchor-spl = "0.17.0"
 solana-program = "1.7.11"
+spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "~1.0.3", features = [ "no-entrypoint" ] }
 metaplex-token-metadata = { git = "https://github.com/lwus/metaplex/", rev = "9bbc2ad059c234b996869a94aff5f63d34539b45", features = [ "no-entrypoint" ] }
 nft-candy-machine = { git = "https://github.com/lwus/metaplex/", rev = "9bbc2ad059c234b996869a94aff5f63d34539b45", features = [ "cpi" ] }
