Rev cmv1 zombie dep to get functional m1 program-test
- m1 testing is broken in 1.7.11 so zombify cmv1 (rev its
  dependencies)...
- also allows us to add it back to the workspace for a smaller diff
  later

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members=[
   "auction/program",
 
+  "gumdrop/program",
   "metaplex/program",
   "token-entangler/program",
   "token-vault/program",
@@ -13,6 +14,5 @@ exclude = [
   "fixed-price-sale/cli",
   "token-metadata",
   "auction-house/program",
-  "candy-machine/program",
-  "gumdrop/program"
+  "candy-machine/program"
 ]
