Try fixing github workflow run
- candy-machine tests rely on token-metadata being available in the
  right place

--- a/.github/workflows/program-candy-machine.yml
+++ b/.github/workflows/program-candy-machine.yml
@@ -60,6 +60,7 @@ jobs:
 
       # Build deps
       - uses: ./.github/actions/build-token-vault
+      - uses: ./.github/actions/build-token-metadata
 
       # Run test
       - name: test-candy-machine
