--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -48,7 +48,7 @@
     "debug": "^4.3.3"
   },
   "devDependencies": {
-    "@metaplex-foundation/solita": "0.1.0",
+    "@metaplex-foundation/solita": "^0.2.0",
     "@solana/spl-token": "0.1.8",
     "@types/bn.js": "^5.1.0",
     "@types/debug": "^4.1.7",
