--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,3 +7,5 @@ plugins:
     spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-3.2.0-rc.12.cjs
+
+nmHoistingLimits: dependencies
