--- a/fixed-price-sale/cli/Cargo.toml
+++ b/fixed-price-sale/cli/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "3.0.5", features = [ "derive" ] }
 solana-sdk = "1.9.5"
 solana-client = "1.9.5"
 mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
-mpl-token-metadata = { path = "../../token-metadata/program", features = [ "no-entrypoint" ], version = "1.1.0" }
+mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.1.0" }
 borsh = "0.9.1"
 spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
 anchor-lang = "0.22.1"
