--- a/fixed-price-sale/cli/Cargo.toml
+++ b/fixed-price-sale/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mpl_fixed_price_sale_cli"
+name = "mpl-fixed-price-sale-cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,3 +17,4 @@ spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
 anchor-lang = "0.22.1"
 chrono = "0.4.19"
 spl-associated-token-account = "1.0.3"
+serde_json = "1.0.79"
