--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@metaplex-foundation/solita": "^0.2.0",
+    "@types/bn.js": "^5.1.0",
     "@types/tape": "^4.13.2",
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
