--- a/token-metadata/js/package.json
+++ b/token-metadata/js/package.json
@@ -13,7 +13,7 @@
     "postpublish": "git push origin && git push origin --tags",
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
-    "api:gen": "node scripts/api-gen-ts.js && yarn fix:prettier && yarn fix:lint",
+    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "test": "echo 'Not testing generated code, please run program tests instead'",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
