--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -13,7 +13,7 @@
     "amman:stop": "pkill -f solana-test-validator",
     "test": "DEBUG=\"mpl:tm-test:*\" tape ./dist/test/*.test.js",
     "test:local": "yarn build && yarn test",
-    "api:gen": "node scripts/api-gen-ts.js && prettier --write ./src/**/*.ts",
+    "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
     "prettier": "prettier \"{src,test}/**/*.ts\" --check",
