--- a/token-entangler/program/Cargo.toml
+++ b/token-entangler/program/Cargo.toml
@@ -24,3 +24,10 @@ spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]
 mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ], path="../../token-metadata/program" }
 thiserror = "~1.0"
 arrayref = "~0.3.6"
+
+[dev-dependencies]
+# anchor-client = "~0.22"
+solana-program-test = "~1.9.5"
+# solana-program = "~1.9.5"
+solana-sdk = "~1.9.5"
+# spl-associated-token-account = "~1.0.3"
