--- a/auctioneer/program/Cargo.toml
+++ b/auctioneer/program/Cargo.toml
@@ -25,3 +25,16 @@ solana-program = "~1.9.15"
 anchor-lang = "~0.24.2"
 anchor-spl = "~0.24.2"
 mpl-auction-house = { path = "../../auction-house/program", features = ["cpi", "no-entrypoint"]}
+
+[dev-dependencies]
+anchor-client = "~0.24.2"
+shellexpand = "~2.1.0"
+serde_json = "~1.0"
+solana-program = "~1.9.15"
+mpl-testing-utils= {path="../../core/rust/testing-utils", version="0.0.2"}
+solana-program-test = "~1.9.15"
+solana-sdk = "~1.9.15"
+env_logger="~0.9.0"
+spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
+mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ], path="../../token-metadata/program" }
+spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
