--- a/.github/workflows/program-token-entangler.yml
+++ b/.github/workflows/program-token-entangler.yml
@@ -60,6 +60,9 @@ jobs:
             ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{
             env.RUSTC_HASH }}
 
+      # Run format and lint checks
+      - uses: ./.github/actions/verify-rust
+
       # Build deps
       - uses: ./.github/actions/build-metaplex
       - uses: ./.github/actions/build-token-metadata
