--- a/.github/workflows/program-token-entangler.yml
+++ b/.github/workflows/program-token-entangler.yml
@@ -62,6 +62,8 @@ jobs:
 
       # Run format and lint checks
       - uses: ./.github/actions/verify-rust
+        with:
+          path: token-entangler/program/**
 
       # Build deps
       - uses: ./.github/actions/build-metaplex
