Enforcing linting requirements for tests in token-metadata

--- a/.github/actions/verify-rust/action.yml
+++ b/.github/actions/verify-rust/action.yml
@@ -13,4 +13,4 @@ runs:
       uses: actions-rs/cargo@v1
       with:
         command: clippy
-        args: --no-deps -- -D warnings
+        args: --all-targets --all-features --no-deps -- -D warnings
