--- a/.github/actions/verify-rust/action.yml
+++ b/.github/actions/verify-rust/action.yml
@@ -1,5 +1,10 @@
 name: Verify Rust
 
+inputs:
+  crate:
+    description: The crate you want to verify
+    required: true
+
 runs:
   using: "composite"
   steps:
@@ -13,4 +18,4 @@ runs:
       uses: actions-rs/cargo@v1
       with:
         command: clippy
-        args: --all-targets --all-features --no-deps -- -D warnings
+        args: -p ${{ inputs.crate }} --all-features --no-deps -- -D warnings
