--- a/.github/workflows/program-token-metadata.yml
+++ b/.github/workflows/program-token-metadata.yml
@@ -63,7 +63,7 @@ jobs:
       # Run format and lint checks
       - uses: ./.github/actions/verify-rust
         with: 
-          crate: mpl-token-metadata
+          working-directory: ./token-metadata/program
 
       # Build deps
       - uses: ./.github/actions/build-token-vault
