--- a/.github/workflows/program-token-metadata.yml
+++ b/.github/workflows/program-token-metadata.yml
@@ -60,7 +60,7 @@ jobs:
             ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{
             env.RUSTC_HASH }}
 
-      # Run format and lint checks
+      # Run lint checks
       - uses: ./.github/actions/verify-rust
         with: 
           working-directory: ./token-metadata/program
