--- a/auctioneer/js/package.json
+++ b/auctioneer/js/package.json
@@ -13,7 +13,7 @@
     "build:docs": "typedoc",
     "build": "rimraf dist && tsc -p tsconfig.json",
     "build:watch": "rimraf dist && tsc -p tsconfig.json --watch",
-    "test": "esr ./test/*.test.ts",
+    "test": "echo 'SDK not tested yet'",
     "api:gen": "DEBUG='(solita|rustbin):(info|error)' solita",
     "lint": "eslint \"{src,test}/**/*.ts\" --format stylish",
     "fix:lint": "yarn lint --fix",
@@ -47,12 +47,9 @@
   },
   "devDependencies": {
     "@metaplex-foundation/solita": "^0.5.0",
-    "@types/tape": "^4.13.2",
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "spok": "^1.4.3",
-    "tape": "^5.5.2",
     "typescript": "^4.6.2"
   }
 }
