--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -29,3 +29,6 @@ spl-associated-token-account = { version = "1.0.3", features = [
 anchor-spl = "0.24.2"
 solana-program = "1.9.18"
 solana-gateway = "0.2.0"
+
+[dev-dependencies]
+solana-program-test = "1.9.18"
