--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib", "lib"]
 [features]
 no-entrypoint = []
 no-idl = []
+test-bpf = []
 cpi = ["no-entrypoint"]
 default = []
 
@@ -32,3 +33,7 @@ solana-gateway = "0.2.0"
 
 [dev-dependencies]
 solana-program-test = "1.9.18"
+solana-sdk = "~1.9.18"
+anchor-client = "0.24.2"
+borsh = "~0.9.2"
+
