Changed how Local Env keypairs are generated and replaced.
Now moved shell and js files into utils/env_setup directory and added script shortcuts to package.js
Now all occurences of public keys are replaced when npm build_dev_env is called. It stores original and development
keys in utils/env_setup/default_keyring.json and .json.backup directories. Do not delete them.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "build": "yarn build:core && yarn build:auction && yarn build:parallel && yarn build:metaplex",
     "test": "lerna run --parallel test",
     "lint": "lerna run --parallel lint",
-    "fix": "lerna run --parallel fix"
+    "fix": "lerna run --parallel fix",
+    "build_dev_env": "node ./utils/env_setup/set_dev_addr.js && cargo build",
+    "reset_dev_env": "node ./utils/env_setup/set_dev_addr.js reset",
+    "compile_contracts": "./utils/env_setup/compile_contracts.sh",
+    "deploy_all_contracts": "./utils/env_setup/deploy_contracts.sh",
+    "who": "whoami"
   },
   "workspaces": [
     "core/js",
