--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -60,7 +60,15 @@ jobs:
           key:
             ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{
             env.RUSTC_HASH }}
+
+      # Run lint checks
+      - uses: ./.github/actions/verify-rust
+        with:
+          working-directory: ./auction-house/program
+
+      # Build deps
       - uses: ./.github/actions/build-token-metadata
+
       # Run test
       - name: test-auction-house-program
         id: run_test
