--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "set.dev.env": "node ./utils/env_setup/set-dev-env.js && cargo build",
     "unset.dev.env": "node ./utils/env_setup/set-dev-env.js reset",
     "compile.contracts": "./utils/env_setup/compile-contracts.sh",
-    "deploy.all.contracts": "./utils/env_setup/deploy-contracts.sh",
-    "publish.all.npmjs": "node ./utils/env_setup/publish-npm-packs.js reset"
+    "deploy.contracts": "./utils/env_setup/deploy-contracts.sh",
+    "publish.npms": "node ./utils/env_setup/publish-npm-packs.js reset"
   },
   "workspaces": [
     "core/js",
