--- a/.github/workflows/program-token-metadata.yml
+++ b/.github/workflows/program-token-metadata.yml
@@ -8,7 +8,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  SOLANA_VERSION: 1.9.22
+  SOLANA_VERSION_STABLE: 1.9.22
+  SOLANA_VERSION_UNSTABLE: 1.10.5
   RUST_TOOLCHAIN: stable
 
 jobs:
