--- a/.github/workflows/sdk-token-vault.yml
+++ b/.github/workflows/sdk-token-vault.yml
@@ -59,7 +59,7 @@ jobs:
         uses: ./.github/actions/publish-to-npm
         id: publish-to-npm
         with:
-          npm-token: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          npm-token: ${{ secrets.NPM_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-package-dir: ./token-vault/js
           commit-sha: ${{ github.sha }}
