--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -24,6 +24,8 @@ spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"
 thiserror = "~1.0"
 borsh = "~0.9.2"
 shank = { version = "~0.0.2" }
+serde = "~1.0.136"
+serde_with = "~1.12.0"
 
 [dev-dependencies]
 solana-sdk = "~1.10.19"
