refactor(token-metadata): set-collection-size works for all cases
commit descript.

--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -8,6 +8,8 @@ license = "AGPL-3.0"
 edition = "2021"
 readme = "README.md"
 
+[profile.release]
+overflow-checks = true
 
 [features]
 no-entrypoint = []
