--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -30,10 +30,13 @@ spl-associated-token-account = { version = "1.0.3", features = [
 anchor-spl = "0.24.2"
 solana-program = "1.9.18"
 solana-gateway = "0.2.0"
+zeroize="=1.3.0"
+
 
 [dev-dependencies]
 solana-program-test = "1.9.18"
 solana-sdk = "~1.9.18"
 anchor-client = "0.24.2"
 borsh = "~0.9.2"
+solana-gateway-program = {  git = "https://github.com/identity-com/on-chain-identity-gateway", branch = "develop" }
 
