--- a/token-metadata/program/Cargo.toml
+++ b/token-metadata/program/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [features]
 no-entrypoint = []
 test-bpf = []
+serde-feature = ["serde", "serde_with"]
 
 [dependencies]
 num-derive = "~0.3"
@@ -24,8 +25,8 @@ spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"
 thiserror = "~1.0"
 borsh = "~0.9.2"
 shank = { version = "~0.0.2" }
-serde = "~1.0.136"
-serde_with = "~1.12.0"
+serde = { version = "~1.0.136", optional = true }
+serde_with = { version = "~1.12.0", optional = true }
 
 [dev-dependencies]
 solana-sdk = "~1.10.19"
