--- a/candy-machine/js/package.json
+++ b/candy-machine/js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metaplex-foundation/mpl-candy-machine",
   "version": "4.2.0",
-  "programVersion": "3.1.3",
+  "programVersion": "4.0.2",
   "description": "MPL Candy Machine JavaScript API. This MPL package is for the current generation of candy machine which is 2.0.0",
   "main": "dist/src/mpl-candy-machine.js",
   "types": "dist/src/mpl-candy-machine.d.ts",
@@ -46,6 +46,7 @@
     "@solana/web3.js": "^1.35.1"
   },
   "devDependencies": {
+    "@metaplex-foundation/solita": "^0.12.0",
     "eslint": "^8.3.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
