--- a/auction-house/program/Cargo.toml
+++ b/auction-house/program/Cargo.toml
@@ -21,22 +21,22 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-solana-program = "~1.9.28"
-anchor-lang = "~0.24.2"
-anchor-spl = "~0.24.2"
-spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
-spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
-mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
+solana-program = "~1.10.25"
+anchor-lang = "~0.25"
+anchor-spl = "~0.25"
+spl-token = { version = "~3.3",  features = ["no-entrypoint"] }
+spl-associated-token-account = {version = "~1.0.5", features = ["no-entrypoint"]}
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
 metaplex-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
 thiserror = "~1.0"
 arrayref = "~0.3.6"
 
 [dev-dependencies]
-anchor-client = "~0.24.2"
+anchor-client = "~0.25"
 shellexpand = "~2.1.0"
 serde_json = "~1.0"
-solana-program = "~1.9.28"
+solana-program = "~1.10.25"
 mpl-testing-utils= {path="../../core/rust/testing-utils" }
-solana-program-test = "~1.9.28"
-solana-sdk = "~1.9.28"
+solana-program-test = "~1.10.25"
+solana-sdk = "~1.10.25"
 env_logger="~0.9.0"
