--- a/candy-machine/program/Cargo.toml
+++ b/candy-machine/program/Cargo.toml
@@ -20,19 +20,19 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.24.2"
+anchor-lang = "0.25"
 arrayref = "0.3.6"
-spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
-mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "1.0.3", features = [
+spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
+spl-associated-token-account = { version = "1.0.5", features = [
   "no-entrypoint",
 ] }
-anchor-spl = "0.24.2"
-solana-program = "1.9.18"
+anchor-spl = "0.25"
+solana-program = "1.10.25"
 solana-gateway = "0.2.0"
 
 [dev-dependencies]
-solana-program-test = "1.9.18"
-solana-sdk = "~1.9.18"
-anchor-client = "0.24.2"
+solana-program-test = "1.10.25"
+solana-sdk = "~1.10.25"
+anchor-client = "0.25"
 borsh = "~0.9.2"
