--- a/core/rust/testing-utils/Cargo.toml
+++ b/core/rust/testing-utils/Cargo.toml
@@ -14,15 +14,15 @@ crate-type = ["lib"]
 path = "src/lib.rs"
 
 [dependencies]
-anchor-client = "~0.24.1"
+anchor-client = "~0.25"
 shellexpand = "~2.1.0"
 serde_json = "~1.0"
-solana-program-test = "~1.9.15"
-solana-program = "~1.9.15"
-solana-sdk = "~1.9.15" 
-spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "~1.0.3",  features = ["no-entrypoint"] }
-mpl-token-metadata = { version="~1.2.10", features = [ "no-entrypoint" ] }
+solana-program-test = "~1.10.25"
+solana-program = "~1.10.25"
+solana-sdk = "~1.10.25" 
+spl-token = { version = "~3.3.0",  features = ["no-entrypoint"] }
+spl-associated-token-account = { version = "~1.0.5",  features = ["no-entrypoint"] }
+mpl-token-metadata = {path = "../../../token-metadata/program", features = ["no-entrypoint"]}
 mpl-token-vault = { version = "~0.1.1", path = "../../../token-vault/program", features = [ "no-entrypoint" ] }
 rand = "~0.7.3"
 num = "~0.4"
