--- a/fixed-price-sale/cli/Cargo.toml
+++ b/fixed-price-sale/cli/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.30"
 clap = { version = "3.0.5", features = [ "derive" ] }
-solana-sdk = "1.9.5"
-solana-client = "1.9.5"
+solana-sdk = "1.10.25"
+solana-client = "1.10.25"
 mpl-fixed-price-sale = { path = "../program", features = [ "no-entrypoint" ] }
-mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.1.0" }
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
 borsh = "0.9.1"
-spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
-anchor-lang = "0.24.2"
+spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
+anchor-lang = "0.25"
 chrono = "0.4.19"
-spl-associated-token-account = "1.0.3"
+spl-associated-token-account = "1.0.5"
 serde_json = "1.0.79"
