--- a/fixed-price-sale/program/Cargo.toml
+++ b/fixed-price-sale/program/Cargo.toml
@@ -17,14 +17,14 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = {version="~0.24.2", features=["init-if-needed"]}
-anchor-spl = {version="~0.24.2"}
-spl-token = "~3.2.0"
-mpl-token-metadata = { features = [ "no-entrypoint" ], version="~1.2.10" }
+anchor-lang = {version="~0.25", features=["init-if-needed"]}
+anchor-spl = {version="~0.25"}
+spl-token = "~3.3.0"
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
 
 [dev-dependencies]
-anchor-client = "~0.24.2"
-solana-program-test = "~1.9.28"
-solana-program = "~1.9.28"
-solana-sdk = "~1.9.28"
-spl-associated-token-account = "~1.0.3"
+anchor-client = "~0.25"
+solana-program-test = "~1.10.25"
+solana-program = "~1.10.25"
+solana-sdk = "~1.10.25"
+spl-associated-token-account = "~1.0.5"
