--- a/gumdrop/program/Cargo.toml
+++ b/gumdrop/program/Cargo.toml
@@ -22,9 +22,9 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.24.2"
-anchor-spl = "0.24.2"
-solana-program = "1.9.18"
-spl-token = "3.2.0"
-spl-associated-token-account = { version = "=1.0.3", features = [ "no-entrypoint" ] }
-mpl-token-metadata = { version="=1.2.7", features = [ "no-entrypoint" ] }
+anchor-lang = "0.25"
+anchor-spl = "0.25"
+solana-program = "1.10.25"
+spl-token = "3.3.0"
+spl-associated-token-account = {version = "=1.0.5", features = ["no-entrypoint"]}
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
