--- a/token-entangler/program/Cargo.toml
+++ b/token-entangler/program/Cargo.toml
@@ -17,14 +17,14 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "~0.24.2"
-anchor-spl = "~0.24.2"
-spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
-spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
-mpl-token-metadata = { version="~1.2.10", features = [ "no-entrypoint" ] }
+anchor-lang = "~0.25"
+anchor-spl = "~0.25"
+spl-token = {version = "~3.3.0", features = ["no-entrypoint"]}
+spl-associated-token-account = {version = "~1.0.5", features = ["no-entrypoint"]}
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
 thiserror = "~1.0"
 arrayref = "~0.3.6"
 
 [dev-dependencies]
-solana-program-test = "~1.9.28"
-solana-sdk = "~1.9.28"
+solana-program-test = "~1.10.25"
+solana-sdk = "~1.10.25"
