--- a/token-metadata/cli/Cargo.toml
+++ b/token-metadata/cli/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2021"
 publish = false
 
 [dependencies]
-solana-client = "1.9.5"
-solana-program = "1.9.5"
-solana-sdk = "1.9.5"
+solana-client = "1.10.25"
+solana-program = "1.10.25"
+solana-sdk = "1.10.25"
 bincode = "1.3.2"
 borsh = "0.9.1"
 clap = "2.33.0"
-solana-clap-utils = "1.9.5"
-solana-cli-config = "1.9.5"
-mpl-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
-spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
+solana-clap-utils = "1.10.25"
+solana-cli-config = "1.10.25"
+mpl-token-metadata = {path = "../../token-metadata/program", features = ["no-entrypoint"]}
+spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
