--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo '::set-output name=value::[\"1.10.31\", \"1.11.4\"]'
+          echo '::set-output name=value::[1.10.31, 1.11.4]'
 
   changes:
     needs: setup
