Fixing variable evaluation.

--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get install -y jq \
           MAINNET=$(curl https://api.mainnet-beta.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') \
           TESTNET=$(curl https://api.testnet.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') \
-          echo '::set-output name=value::[MAINNET, TESTNET]'
+          echo '::set-output name=value::[$(MAINNET), $(TESTNET)]'
 
   changes:
     needs: setup
