--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -22,7 +22,8 @@ jobs:
           MAINNET=$(curl https://api.mainnet-beta.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') \
           TESTNET=$(curl https://api.testnet.solana.com -X POST -H "Content-Type: application/json" -d '{"jsonrpc":"2.0","id":1, "method":"getVersion"}' | jq '.result["solana-core"]') \
           VERSIONS=($MAINNET $TESTNET)
-          echo '::set-output name=value::toJson(VERSIONS)'
+          VERSION_JSON=$(echo "${VERSIONS[@]}" | jq -s)
+          echo '::set-output name=value::$(VERSION_JSON)'
 
   changes:
     needs: setup
