Switching to bash shell.

--- a/.github/workflows/program-auction-house.yml
+++ b/.github/workflows/program-auction-house.yml
@@ -24,6 +24,7 @@ jobs:
           VERSIONS=($MAINNET $TESTNET)
           VERSION_JSON=$(echo "${VERSIONS[@]}" | jq -s)
           echo '::set-output name=value::${VERSION_JSON}'
+        shell: bash
 
   changes:
     needs: setup
